--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^5.1.0",
     "swiper": "^8.3.1",
     "web-vitals": "^2.1.4"
   },
